--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,39 @@
-# Compiled class file
-*.class
+.idea
+*.iml
+target
 
-# Log file
-*.log
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+*.key
 
-# BlueJ files
-*.ctxt
+# External tool builders
+.externalToolBuilders/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Locally stored "Eclipse launch configurations"
+*.launch
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# CDT-specific
+.cproject
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# PDT-specific
+.buildpath
+propelr-agent/dependency-reduced-pom.xml
+
+.pmd
+tree.txt
+
+# Build scripts
+**/build-helpers
+**/cfn-deployment-scripts
